--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-
+    <meta name="author" content="Hrvoje Trčak">
     <link rel="stylesheet" href="style.css">
-    <title>2. kol</title>
+    <title>site-demo</title>
 </head>
 
 <body>
@@ -38,10 +38,8 @@
             </div>
             <article>
                 <h3>We live in <span>creativity</span></h3>
-                <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie,
-                    musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li
-                    pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On
-                    refusa continuar payar custosi traductores.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facere repellendus dolorem quasi officiis repellat porro illo incidunt natus temporibus molestias ratione quis, dolorum debitis ipsum quidem impedit provident accusamus!
+                </p>
             </article>
         </div>
     </section>
